--- a/workshops-frontend/public/index.html
+++ b/workshops-frontend/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+
+    <script defer data-domain="gruppen-tool.jonasbernard.de" src="https://plausible.jonasbernard.de/js/script.js"></script>
+
     <title>Gruppen-Tool</title>
   </head>
   <body>
